--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_staggered_grid_view: ^0.2.7
+  flutter_staggered_grid_view: ^0.3.0
   cloud_firestore: ^0.13.7
   firebase_core: ^0.4.4
   firebase_auth: ^0.16.1
+  image: ^2.1.14
   progress_dialog: ^1.2.4
   provider: ^4.3.1
-  image_picker_web: ^1.0.9
+  file_picker_web: any
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
